# gbarecomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  COSIM_ORACLE.md  DEBUG.md  ENHANCEMENTS.md  GBA_ACCURACY_BURNDOWN.md  ISSUES.md  PRINCIPLES.md  README.md  RELEASE_NOTES.md  TCP.md  THIRD_PARTY_ATTRIBUTION.md
bios/: README.md  gba_bios.toml  gba_bios_excltest.toml
cmake/: runtime.cmake.in
cmake/toolchains/: clang-mingw.cmake
docs/: ARCHITECTURE.md  BUILD_PERFORMANCE.md  DEBUGGING.md  GBA_REFERENCE_NOTES.md  ROADMAP.md  SLJIT.md  TCC_BACKEND.md  TOML_SCHEMA.md  WIDESCREEN_STEPC_PLAN.md
oracle/: CMakeLists.txt  README.md  audio_io_probe.py  build_instruction_coverage.py  check_hang.py  cycle_onset.py  determinism_probe.py  diff_anim.py  diff_audio.py  diff_audio_drift.py  diff_counters.py  diff_cycle_nba.py  diff_cycle_trace.py  diff_frame.py  diff_interp.py  diff_intro.py  diff_io.py  diff_irq_nba.py  diff_iwram.py  diff_m4a.py  diff_mmio_nba.py  diff_video_nba.py  dual_drive.py  dump_regions.py  find_animobj.py  find_first_diverge.py  fp_cycle_diff.py  fp_pair_diff.py  gba_cosim.py  gba_tcp.py  inst_per_frame.py  irq_sources.py  main.cpp  mem_diff.py  nba_common.py  phase_probe.py  recomp_paths.py  ref_diff.py  setup-mgba.sh  spin_mem_diff.py  (+4 more)
oracle/patches/: 0001-msys2-as-windows.patch  0002-windows-no-sigtrap.patch
src/armv4t/: arm_codegen.cpp  arm_codegen.h  arm_decode.cpp  arm_decode.h  arm_ir.cpp  arm_ir.h  arm_sljit.cpp  arm_sljit.h  arm_sljit_classify.h  arm_sljit_support.cpp  bus.h  interpreter.cpp  interpreter.h  runtime_arm.cpp  runtime_arm.h  runtime_arm_types.h  thumb_decode.cpp
src/debug/: cosim.cpp  cosim.h  cosim_state.cpp  cosim_state.h  snapshot.cpp  snapshot.h  tcp_debug_server.cpp  tcp_debug_server.h  trace_ring.cpp  trace_ring.h  ws_provenance.cpp  ws_provenance.h  ws_sidecar.cpp  ws_sidecar.h
src/gba/: audio_shadow.cpp  audio_shadow.h  crc32.cpp  crc32.h  gba_audio.cpp  gba_audio.h  gba_bios.cpp  gba_bios.h  gba_bus.cpp  gba_bus.h  gba_dma.cpp  gba_dma.h  gba_input.cpp  gba_input.h  gba_io.cpp  gba_io.h  gba_irq.cpp  gba_irq.h  gba_m4a.cpp  gba_m4a.h  gba_memory.cpp  gba_memory.h  gba_ppu.cpp  gba_ppu.h  gba_rom_header.cpp  gba_rom_header.h  gba_rtc.cpp  gba_rtc.h  gba_save.cpp  gba_save.h  gba_scheduler.cpp  gba_scheduler.h  gba_timers.cpp  gba_timers.h  mp2k_shadow.cpp  mp2k_shadow.h
src/recompile/: codegen_shards.cpp  codegen_shards.h  emit_function.cpp  emit_function.h  function_finder.cpp  function_finder.h
src/runtime/: arm_cpu_bridge.cpp  arm_cpu_bridge.h  asset_picker.cpp  asset_picker.h  bios_hle.cpp  bios_hle.h  color_lut.cpp  color_lut.h  generated_dispatch.cpp  generated_dispatch.h  heal_gate.cpp  heal_gate.h  host_platform.cpp  host_platform.h  host_window.cpp  host_window.h  launcher_seam.h  overlay_abi.h  overlay_compile.cpp  overlay_compile.h  overlay_emit.cpp  overlay_emit.h  overlay_loader.cpp  overlay_loader.h  overlay_runtime_arm.h  overlay_sljit_heal.cpp  overlay_sljit_heal.h  presentation_layout.h  runtime.cpp  runtime.h  runtime_arm_default_aborts.cpp  runtime_bus_bridge.cpp  runtime_bus_bridge.h  self_heal.h  self_heal_cluster.cpp  sljit_gate.cpp  sljit_gate.h  view_config.h
src/runtime/generated_bios/: .gitignore  bios_dispatch_stub.cpp  bios_dispatch_table.cpp
tests/armv4t/: decoder_smoke.cpp  interpreter_smoke.cpp  test_main.cpp
tests/bus/: test_main.cpp
tests/cmake/: assert_runtime_monolith_guard.cmake
tests/cmake/runtime_monolith_guard/: CMakeLists.txt
tests/codegen/: gen_codegen_tests.cpp  sljit_test_main.cpp  stubs.cpp  stubs.h  test_cases.cpp  test_cases.h  test_main.cpp
tests/dma/: test_main.cpp
tests/heal_gate/: heal_gate_test.cpp  runtime_stubs.cpp
tests/irq/: test_main.cpp
tests/ppu_smoke/: test_main.cpp
tests/presentation_layout/: test_main.cpp
tests/recompile/: codegen_shards_test.cpp  function_finder_test.cpp
tests/selfheal/: cluster_test.cpp  coverage_sweep.sh  stage2_bios_identical.sh
tests/sljit/: block_test.cpp  function_test.cpp  gate_test.cpp  smoke_test.c
tests/thumb/: test_main.cpp
tests/timers/: test_main.cpp
tools/: analyze_frame_phase.py  analyze_present_cadence.py  build_cli.py  cli.py  fetch_tcc.ps1  package_release.ps1  tcp_screenshot.ps1
tools/bios_smoke/: dispatch_stub.cpp  main.cpp
tools/gba_recompile/: config.cpp  config.h  function_finder.cpp  function_finder.h  main.cpp
tools/gba_scan/: main.cpp
tools/gbaref/: .gitignore  README.md  build.sh  frontend.cpp
tools/import_bios_symbols/: import_bios_symbols.py
tools/symbol_import/: main.cpp
tools/test_rom_runner/: main.cpp
